objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Advertising Sales Process</fullName>
        <description>Process for Advertising Sales</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contract Phase</fullName>
        </values>
        <values>
            <fullName>Developing</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Amendment Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Pending Close</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Quotation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Deal Process</fullName>
        <description>Process used for Deal Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Fulfillment Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Deal Awarded</fullName>
        </values>
        <values>
            <fullName>Design</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Market Process</fullName>
        <description>Process used for Market Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Prospect</fullName>
        </values>
        <values>
            <fullName>Prospect - Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Program Part List</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Delivery</fullName>
        </values>
        <values>
            <fullName>Handoff</fullName>
        </values>
        <values>
            <fullName>Negotiation%2F Review</fullName>
        </values>
        <values>
            <fullName>Pending Close</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Quotation</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Delivery</fullName>
        </values>
        <values>
            <fullName>Handoff</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Pending Close</fullName>
        </values>
        <values>
            <fullName>Procurement</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Quotation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  Account.OwnerId, Account.OwnerName__c, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Target_Programs__c</fullName>
        <description>W-003749 - Used for CR PPL Process</description>
        <label>Additional Target Program(s)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRB_User_Guide__c</fullName>
        <description>Commitment Review Board &#39;CRB&#39; Reference Guide</description>
        <formula>HYPERLINK(&#39;https://panacorp--uatr1.my.salesforce.com/sfc/p/8F0000004caD/a/8F0000008TOQ/JvqP.I_jGM4yVj7ILZ7J3rmysM_droBElc1.tRqAT78&#39;, &#39;CRB User Guide&#39;, &#39;Self&#39;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Commitment Review Board &#39;CRB&#39; Reference Guide</inlineHelpText>
        <label>CRB User Guide</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Drivers__c</fullName>
        <label>Decision Drivers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comparison to Competitors</fullName>
                </value>
                <value>
                    <fullName>Contract Terms &amp; Negotiations</fullName>
                </value>
                <value>
                    <fullName>Flexibility &amp; Customizability</fullName>
                </value>
                <value>
                    <fullName>Offerability, Innovation or Roadmap</fullName>
                </value>
                <value>
                    <fullName>Pricing Model, Product Pricing, or TCO</fullName>
                </value>
                <value>
                    <fullName>Prior Vendor Relationships</fullName>
                </value>
                <value>
                    <fullName>PTS Offering and Related</fullName>
                </value>
                <value>
                    <fullName>Sales Process, Support &amp; Responsiveness</fullName>
                </value>
                <value>
                    <fullName>SW Quality or Execution</fullName>
                </value>
                <value>
                    <fullName>System or Connectivity Reliability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effectivity__c</fullName>
        <label>Effectivity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_IFC__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.Is_IFC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is IFC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Latest_PPL_Revision__c</fullName>
        <formula>CONTAINS(L2I_Program_Num__r.Latest_PPL_Revision_Rollup__c,  Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Latest PPL Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_AC_Operator_Region__c</fullName>
        <formula>TEXT(L2I_AC_Operator__r.L2I_Region__c)</formula>
        <label>Aircraft Operator Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_AC_Operator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Operator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (A/C Operator)</relationshipLabel>
        <relationshipName>AircraftOperatorOpportunties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Actual_Proposal_Submittal_Date__c</fullName>
        <label>Actual Proposal Submittal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Actual_RFP_Receipt_Date__c</fullName>
        <label>Actual RFP Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Ad_Opp_Account_Type__c</fullName>
        <formula>TEXT(Account.Type)</formula>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Ad_Ops_Notes__c</fullName>
        <label>Ad Ops Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Additional_Description__c</fullName>
        <description>Description2 from Oracle</description>
        <label>Additional Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Advertiser_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Advertising sales users</description>
        <inlineHelpText>Please provide the Sales Agency</inlineHelpText>
        <label>Advertiser Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Agency</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Agency_Revenue_Share_Dollars__c</fullName>
        <formula>Amount  *  L2I_Agency_Revenue_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Revenue Share ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Agency_Revenue_Share__c</fullName>
        <description>for advertising sales to enter the percentage of the agency rev share</description>
        <inlineHelpText>Please enter the agency revenue share percentage.</inlineHelpText>
        <label>Agency Revenue Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_AircraftQuantity__c</fullName>
        <label>Aircraft Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_AircraftType__c</fullName>
        <formula>L2I_Aircraft_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aircraft Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Aircraft Owner)</relationshipLabel>
        <relationshipName>Aircraft_Owner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Quantity_Option__c</fullName>
        <inlineHelpText>Potential aircraft options that the Operator/Owner has not exercised with the OEM or 3rd Party</inlineHelpText>
        <label>xxx Optional Aircraft Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Quantity__c</fullName>
        <formula>L2I_Delivery_Schedule__r.Aircraft_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xxx Aircraft Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Aircraft_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Aircraft Type</label>
        <referenceTo>L2I_Aircraft_Type__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Airline_Revenue_Share__c</fullName>
        <formula>Amount  *  L2I_Opp_Airline_Revenue_Share__c</formula>
        <label>Airline Revenue Share ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Allow_Warranty_Fields__c</fullName>
        <formula>Not(OR(TEXT(L2I_Product_Category__c) = &quot;DSS&quot;, TEXT(L2I_Product_Category__c) = &quot;PTS&quot;,
			 AND(NOT(ISBLANK(TEXT(PT_PPL_Type__c))),
							TEXT(PT_PPL_Type__c) != &quot;ZZ&quot;,
							TEXT(PT_PPL_Type__c) != &quot;EQ&quot;
						 )
		   )
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Warranty Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Are_These_Follow_On_Aircraft__c</fullName>
        <label>Are These Follow On Aircraft?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Are_These_Partial_Shipsets__c</fullName>
        <label>Are These Partial Shipsets?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Are_any_of_these_AC_to_be_leased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are any of these Aircraft to be leased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Attribute2__c</fullName>
        <label>L2I_Attribute2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_AutoExtend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoExtend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Award_Probability__c</fullName>
        <inlineHelpText>Does the customer have internal go-ahead for the project? Does the airline have a budget? 10% = Customer Budget, Project Go-Ahead Unknown. 50% = Customer expressed interest and validating budget. 100% = Customer Budget, Project Go-Ahead Confirmed.</inlineHelpText>
        <label>P1 (Award %)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Bookings_Amount__c</fullName>
        <formula>(SBQQ__PrimaryQuote__r.L2I_TotalPriceperAircraft__c  - SBQQ__PrimaryQuote__r.L2I_Bookings_Adj_Amount__c) - L2I_Total_Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Business_Class_Cabin_Configuration__c</fullName>
        <label>xxBusiness Class Cabin Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Seat Audio Only</fullName>
                </value>
                <value>
                    <fullName>None; N/A</fullName>
                </value>
                <value>
                    <fullName>Overhead + In-Seat Audio</fullName>
                </value>
                <value>
                    <fullName>Overhead Only (No In-Seat Audio)</fullName>
                </value>
                <value>
                    <fullName>PSS-Only</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD + Overhead</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Business_Initiative__c</fullName>
        <label>Business Initiative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Initiative</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Cabin_Configuration__c</fullName>
        <label>xxCabin Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-Class</fullName>
                </value>
                <value>
                    <fullName>2-Class</fullName>
                </value>
                <value>
                    <fullName>3-Class</fullName>
                </value>
                <value>
                    <fullName>4-Class</fullName>
                </value>
                <value>
                    <fullName>Charter Configuration</fullName>
                </value>
                <value>
                    <fullName>High Capacity Configuration</fullName>
                </value>
                <value>
                    <fullName>Premium Configuration</fullName>
                </value>
                <value>
                    <fullName>Standard Configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Campaign_End_Date__c</fullName>
        <description>For advertising sales to enter the campaign end date</description>
        <inlineHelpText>Please enter the campaign end date</inlineHelpText>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Campaign_Start_Date__c</fullName>
        <description>For Advertising Sales campaign start date</description>
        <inlineHelpText>Please enter the date the campaign started.</inlineHelpText>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Capture_Plan_Quip_URL__c</fullName>
        <label>Capture Plan Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Capture_Plan_Template_URL__c</fullName>
        <defaultValue>&quot;https://panasonicwebteam.quip.com/xbOYAe9I8Wqt/Capture-Plan?template=1&quot;</defaultValue>
        <description>This is for Quip capture plan template</description>
        <label>Capture Plan Template URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Closed_Lost_Reasoning__c</fullName>
        <label>Closed NOT WON Reasoning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L2I_Commitment_Review_Board_CRB_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Commitment Review Board (CRB) Complete</description>
        <label>Commitment Review Board (CRB) Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Competitor_Count__c</fullName>
        <label>Competitor Count</label>
        <summaryFilterItems>
            <field>L2I_Competitors__c.Primary__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>L2I_Competitors__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Connectivity_System_Type__c</fullName>
        <formula>TEXT(SBQQ__PrimaryQuote__r.L2I_Connectivity_System_Type1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Connectivity System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Customer_Signature_Date__c</fullName>
        <description>Date the customer signs the contract.</description>
        <label>Contract Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Customer_Signature_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to mark whether or not a Contract Manager has set the Customer Signature date field</description>
        <label>Customer Signature Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Deal Account Lookup field can be only populated for Deal Opportunity.</errorMessage>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Deal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deal Opportunities</relationshipLabel>
        <relationshipName>DealOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Opportunity_Description__c</fullName>
        <label>Deal Oppty Desc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Opportunity_Quip_URL__c</fullName>
        <label>Deal Opportunity Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Oppty_Desc_Url__c</fullName>
        <formula>IF( L2I_Parent_Opportunity__c != &#39;&#39; ,
HYPERLINK(
&quot;/&quot; &amp; L2I_Parent_Opportunity__c ,
L2I_Deal_Opportunity_Description__c ,
&quot;_self&quot;
), HYPERLINK(
&quot;/&quot; &amp; Id ,
L2I_Deal_Opportunity_Description__c ,
&quot;_self&quot;
))</formula>
        <label>Automated Deal Opportunity Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Deal_Plan_Quip_Template_URL__c</fullName>
        <label>Deal Plan Quip Template URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Delivery_End_Date__c</fullName>
        <formula>L2I_Delivery_Schedule__r.Last_Delivery_Date__c</formula>
        <label>Delivery End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Delivery_SLA_Guarantee__c</fullName>
        <label>Delivery/SLA Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>Fleet</fullName>
                </value>
                <value>
                    <fullName>Aircraft &amp; Fleet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Delivery_SLA_Penalty_Cap_Amount__c</fullName>
        <label>Delivery/SLA Penalty Cap Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Delivery_SLA_Penalty_Cap_Percent__c</fullName>
        <label>Delivery/SLA Penalty Cap %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Delivery_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The delivery schedule header record to be associated with a Sales Opportunity</description>
        <label>Delivery Schedule</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>L2I_DSH__c.Deal_Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.L2I_Parent_Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>L2I_DSH__c</referenceTo>
        <relationshipLabel>Sales Opportunities</relationshipLabel>
        <relationshipName>Sales_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Economy_Cabin_Configuration__c</fullName>
        <label>xxEconomy Cabin Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Seat Audio Only</fullName>
                </value>
                <value>
                    <fullName>None; N/A</fullName>
                </value>
                <value>
                    <fullName>Overhead + In-Seat Audio</fullName>
                </value>
                <value>
                    <fullName>Overhead Only (No In-Seat Audio)</fullName>
                </value>
                <value>
                    <fullName>PSS-Only</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD + Overhead</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Escalation__c</fullName>
        <label>Escalation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_External_Migration_Id__c</fullName>
        <description>This field is used for data migration. External Oracle Id which is Lead Id will be used to populate this field</description>
        <externalId>true</externalId>
        <label>L2I_External_Migration_Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Final_Proposal_Sub_Date_from_Quote__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.L2I_Final_Proposal_Submission_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Proposal Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Firm_Buy_AC_Qty__c</fullName>
        <formula>L2I_AircraftQuantity__c  -  L2I_Leased_Aircraft_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Purchased Aircraft Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_First_Class_Cabin_Configuration__c</fullName>
        <label>xxFirst Class Cabin Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Seat Audio Only</fullName>
                </value>
                <value>
                    <fullName>None; N/A</fullName>
                </value>
                <value>
                    <fullName>Overhead + In-Seat Audio</fullName>
                </value>
                <value>
                    <fullName>Overhead Only (No In-Seat Audio)</fullName>
                </value>
                <value>
                    <fullName>PSS-Only</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD + Overhead</fullName>
                </value>
                <value>
                    <fullName>Seatback AVOD Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_First_Delivery_Date__c</fullName>
        <formula>L2I_Delivery_Schedule__r.First_Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Fiscal_Period__c</fullName>
        <formula>&quot;Q&quot; &amp; CASE(MONTH(CloseDate ), 1, &quot;4&quot;, 2, &quot;4&quot;, 3, &quot;4&quot;, 4, &quot;1&quot;, 5, &quot;1&quot;, 6, &quot;1&quot;, 7, &quot;2&quot;, 8, &quot;2&quot;, 9, &quot;2&quot;, 10, &quot;3&quot;, 11, &quot;3&quot;, 12, &quot;3&quot;, null)+&quot;-&quot; + TEXT(YEAR(CloseDate) + IF(MONTH(CloseDate) &gt;= 7, 1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Fiscal_Year__c</fullName>
        <formula>&quot;FY-&quot; + TEXT(YEAR(CloseDate) - IF(MONTH(CloseDate) &lt; 4, 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Fit_Type__c</fullName>
        <label>Fit Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2I_Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Retrofit</fullName>
                </value>
                <value>
                    <fullName>Initial Sale</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Upsell/Follow-on</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Frequency_Cap__c</fullName>
        <label>Frequency Cap</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_Frequency_Capping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Frequency Capping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Has_Deal_Opp_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a true/false field to tell whether the Deal opportunity has an Opportunity team or not</description>
        <label>Has Deal Opp Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Header_ExternalId__c</fullName>
        <label>Header ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_IFEC_Escalation_Applicability__c</fullName>
        <label>Escalation Applicability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shipset</fullName>
                </value>
                <value>
                    <fullName>Spares</fullName>
                </value>
                <value>
                    <fullName>Shipset &amp; Spares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_In_Committed_Forecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required for business planning purposes since win probability and sales stages are now tied together.</description>
        <inlineHelpText>In committed forecast will drive demand</inlineHelpText>
        <label>In Committed Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2I_Initial_Proposal_Sub_Date_from_Quote__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.SubmittedDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Proposal Submission Date</label>
        <type>Date</type>
    </fields>
</CustomObject>